// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test AccessToken should match snapshot 1`] = `
<div>
  <div
    class="ant-row  css-qaauer css-dev-only-do-not-override-txh9fw"
  >
    <div
      class="label-content"
    >
      <div
        class="config-item-label"
      >
        <div
          class="title"
        >
          访问令牌
        </div>
        <div
          class="tips"
        >
          您可以在IDE工具上使用访问令牌，进行用户认证
        </div>
      </div>
      <button
        class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-primary basic-button-wrapper css-geipcv"
        type="button"
      >
        <span>
          生成Token
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`test AccessToken should match snapshot 2`] = `
<div>
  <div
    class="ant-row  css-qaauer css-dev-only-do-not-override-txh9fw"
  >
    <div
      class="label-content"
    >
      <div
        class="config-item-label"
      >
        <div
          class="title"
        >
          访问令牌
        </div>
        <div
          class="tips"
        >
          您可以在IDE工具上使用访问令牌，进行用户认证
        </div>
      </div>
      <button
        class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-primary basic-button-wrapper css-geipcv"
        type="button"
      >
        <span>
          生成Token
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`test AccessToken should match snapshot 3`] = `
<div>
  <div
    class="ant-row clear-padding-top css-qaauer css-dev-only-do-not-override-txh9fw"
  >
    <div
      class="label-content"
    >
      <div
        class="config-item-label"
      >
        <div
          class="title"
        >
          访问令牌
        </div>
        <div
          class="tips"
        >
          您可以在IDE工具上使用访问令牌，进行用户认证
        </div>
      </div>
      <button
        class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-primary basic-button-wrapper css-geipcv"
        type="button"
      >
        <span>
          生成Token
        </span>
      </button>
    </div>
    <div
      class="token-content"
    >
      <div
        class="token-content-item"
      >
        <span
          class="token-content-item-label"
        >
          Token
        </span>
        <span
          class="css-1sg2lsz"
        >
          <div
            class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
          >
            <div
              class="ant-space-item"
            >
              <span
                class="rect-border-wrapper css-1iiq8r2"
              >
                <svg
                  fill="none"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11.3333 9.33333H8.43906C7.88992 10.8869 6.40828 12 4.66666 12C2.45752 12 0.666656 10.2091 0.666656 8C0.666656 5.79086 2.45752 4 4.66666 4C6.40828 4 7.88992 5.11308 8.43906 6.66667H15.3333V9.33333H14V12H11.3333V9.33333ZM4.66666 9.33333C5.40304 9.33333 5.99999 8.7364 5.99999 8C5.99999 7.2636 5.40304 6.66667 4.66666 6.66667C3.93028 6.66667 3.33332 7.2636 3.33332 8C3.33332 8.7364 3.93028 9.33333 4.66666 9.33333Z"
                    fill="#8A8F99"
                  />
                </svg>
              </span>
            </div>
          </div>
          <span
            class="ant-typography css-dev-only-do-not-override-txh9fw"
          >
            <div
              aria-label="Copy"
              class="ant-typography-copy"
              role="button"
              style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
              tabindex="0"
            >
              <span
                aria-label="copy"
                class="anticon anticon-copy"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="copy"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                  />
                </svg>
              </span>
            </div>
          </span>
        </span>
      </div>
      <div
        class="token-content-item"
      >
        <span
          class="token-content-item-label"
        >
          过期时间
        </span>
        <span
          class="token-content-item-value"
        >
          2024-03-31 10:25:10
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`test AccessToken should match snapshot 4`] = `
<div>
  <div
    class="ant-row clear-padding-top css-qaauer css-dev-only-do-not-override-txh9fw"
  >
    <div
      class="label-content"
    >
      <div
        class="config-item-label"
      >
        <div
          class="title"
        >
          访问令牌
        </div>
        <div
          class="tips"
        >
          您可以在IDE工具上使用访问令牌，进行用户认证
        </div>
      </div>
      <button
        class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-primary basic-button-wrapper css-geipcv"
        type="button"
      >
        <span>
          生成Token
        </span>
      </button>
    </div>
    <div
      class="token-content"
    >
      <div
        class="token-content-item"
      >
        <span
          class="token-content-item-label"
        >
          Token
        </span>
        <span
          class="css-1sg2lsz"
        >
          <div
            class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
          >
            <div
              class="ant-space-item"
            >
              <span
                class="rect-border-wrapper css-1iiq8r2"
              >
                <svg
                  fill="none"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11.3333 9.33333H8.43906C7.88992 10.8869 6.40828 12 4.66666 12C2.45752 12 0.666656 10.2091 0.666656 8C0.666656 5.79086 2.45752 4 4.66666 4C6.40828 4 7.88992 5.11308 8.43906 6.66667H15.3333V9.33333H14V12H11.3333V9.33333ZM4.66666 9.33333C5.40304 9.33333 5.99999 8.7364 5.99999 8C5.99999 7.2636 5.40304 6.66667 4.66666 6.66667C3.93028 6.66667 3.33332 7.2636 3.33332 8C3.33332 8.7364 3.93028 9.33333 4.66666 9.33333Z"
                    fill="#8A8F99"
                  />
                </svg>
              </span>
            </div>
          </div>
          <span
            class="ant-typography css-dev-only-do-not-override-txh9fw"
          >
            <div
              aria-label="Copy"
              class="ant-typography-copy"
              role="button"
              style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
              tabindex="0"
            >
              <span
                aria-label="copy"
                class="anticon anticon-copy"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="copy"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                  />
                </svg>
              </span>
            </div>
          </span>
        </span>
      </div>
      <div
        class="token-content-item"
      >
        <span
          class="token-content-item-label"
        >
          过期时间
        </span>
        <span
          class="token-content-item-value"
        >
          -
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`test AccessToken should match snapshot 5`] = `
<div>
  <div
    class="ant-row clear-padding-top css-qaauer css-dev-only-do-not-override-txh9fw"
  >
    <div
      class="label-content"
    >
      <div
        class="config-item-label"
      >
        <div
          class="title"
        >
          访问令牌
        </div>
        <div
          class="tips"
        >
          您可以在IDE工具上使用访问令牌，进行用户认证
        </div>
      </div>
      <button
        class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-primary basic-button-wrapper css-geipcv"
        type="button"
      >
        <span>
          生成Token
        </span>
      </button>
    </div>
    <div
      class="token-content"
    >
      <div
        class="token-content-item"
      >
        <span
          class="token-content-item-label"
        >
          Token
        </span>
        <span
          class="css-1sg2lsz"
        >
          <div
            class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
          >
            <div
              class="ant-space-item"
            >
              <span
                class="rect-border-wrapper css-1iiq8r2"
              >
                <svg
                  fill="none"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11.3333 9.33333H8.43906C7.88992 10.8869 6.40828 12 4.66666 12C2.45752 12 0.666656 10.2091 0.666656 8C0.666656 5.79086 2.45752 4 4.66666 4C6.40828 4 7.88992 5.11308 8.43906 6.66667H15.3333V9.33333H14V12H11.3333V9.33333ZM4.66666 9.33333C5.40304 9.33333 5.99999 8.7364 5.99999 8C5.99999 7.2636 5.40304 6.66667 4.66666 6.66667C3.93028 6.66667 3.33332 7.2636 3.33332 8C3.33332 8.7364 3.93028 9.33333 4.66666 9.33333Z"
                    fill="#8A8F99"
                  />
                </svg>
              </span>
            </div>
          </div>
          <span
            class="ant-typography css-dev-only-do-not-override-txh9fw"
          >
            <div
              aria-label="Copy"
              class="ant-typography-copy"
              role="button"
              style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
              tabindex="0"
            >
              <span
                aria-label="copy"
                class="anticon anticon-copy"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="copy"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                  />
                </svg>
              </span>
            </div>
          </span>
        </span>
      </div>
      <div
        class="token-content-item"
      >
        <span
          class="token-content-item-label"
        >
          过期时间
        </span>
        <span
          class="token-content-item-value"
        >
          已过期
        </span>
      </div>
    </div>
  </div>
</div>
`;
